_sass/includes/homepage-benefactors-band.scss
.benefactors-wrapper {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 1rem;
  align-items: center;
  grid-column: span 12;
  
  @media screen and (max-width: 768px) {
    grid-template-columns: 1fr;
  }

  .benefactors-logo {
    align-items: center;
    display: flex;
    justify-content: center;
    
    img {
      max-height: 150px;
      width: 100%;
      max-width: 300px;
      object-fit: contain;
      padding: 1rem;

      @media screen and (max-width: 768px) {
        max-width: 200px;
        padding: 1rem;
      }
    }
  }
}

